--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,42 @@
-h1{
-    color:darkolivegreen;
+body {
+    background-color: maroon;
+    color: #ffffff;
+    font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+h1 {
+text-align: center;
+font-size: 400%;
+
+}
+p {
+text-align: center;
+}
+div {
+padding-top: 75px;
+/* border: 5px solid whitesmoke; */
+background-color: white;
+width: 100%;
+height: 1100px;
+text-align: center;
+}
+div:hover{
+background-color: #303030;
+}
+img {
+width: 450px;
+height: 550px;
+border-radius: 80em 80em 80em 80em;
+border: 2px solid whitesmoke;
+box-shadow: 10px 13px 15px 10px whitesmoke
+}
+
+img:hover {
+-webkit-animation: rotating 2s linear infinite;
+-moz-animation: rotating 2s linear infinite;
+-ms-animation: rotating 2s linear infinite;
+-o-animation: rotating 2s linear infinite;
+animation: rotating 2s linear infinite;
+background-color: snow;
+box-shadow: 10px 13px 15px 10px maroon
 }
